[gd_scene load_steps=11 format=2]

[ext_resource path="res://misc/font56.tres" type="DynamicFont" id=1]
[ext_resource path="res://menus/Menu_Gameover.gd" type="Script" id=2]
[ext_resource path="res://misc/font40.tres" type="DynamicFont" id=3]
[ext_resource path="res://misc/font32.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_top = 8.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_top = 8.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
content_margin_top = 8.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Menu_Gameover" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.113725, 0.815686, 0.85098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Label" parent="."]
margin_top = 360.0
margin_right = 1920.0
margin_bottom = 417.0
custom_fonts/font = ExtResource( 1 )
text = "Highscore: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThisRoundStats" type="Label" parent="."]
margin_top = 470.0
margin_right = 1920.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 4 )
text = "Dashes used: 0
Arrows reflected: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 768.0
margin_top = 720.0
margin_right = 1152.0
margin_bottom = 828.0
rect_pivot_offset = Vector2( 192, 54 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.113725, 0.815686, 0.85098, 1 )
custom_colors/font_color = Color( 0.113725, 0.815686, 0.85098, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.815686, 0.85098, 1 )
custom_colors/font_color_pressed = Color( 0.113725, 0.815686, 0.85098, 1 )
enabled_focus_mode = 0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 814.333
margin_top = 900.0
margin_right = 1104.33
margin_bottom = 980.0
rect_pivot_offset = Vector2( 144, 40 )
focus_mode = 0
theme = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.113725, 0.815686, 0.85098, 1 )
custom_colors/font_color = Color( 0.113725, 0.815686, 0.85098, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.815686, 0.85098, 1 )
custom_colors/font_color_pressed = Color( 0.113725, 0.815686, 0.85098, 1 )
enabled_focus_mode = 0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AllTimeLabel" type="Label" parent="."]
margin_left = 1400.0
margin_top = 95.0
margin_right = 1821.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 3 )
text = "All-time statistics:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Label" parent="AllTimeLabel"]
margin_top = 50.0
margin_right = 421.0
margin_bottom = 465.0
custom_fonts/font = ExtResource( 4 )
text = "Dashes used: 0
Arrows reflected: 0
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
